<?xml version="1.0"?>
<package format="2">
  <name>simple_pid_controller</name>
  <version>0.0.0</version>
  <description>The simple_pid_controller package</description>

  <maintainer email="your-email@domain.com">Your Name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>              <!-- Add this line -->
  <build_depend>image_transport</build_depend>        <!-- And this line -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>   
  <build_export_depend>image_transport</build_export_depend> 
  <build_depend>std_srvs</build_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>std_srvs</exec_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>                 <!-- Add this line -->
  <exec_depend>image_transport</exec_depend>           <!-- And this line -->
  <exec_depend>image_view</exec_depend>

  <export>
  </export>
</package>
